--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,156 @@
-/* You can add global styles to this file, and also import other style files */
+/*#map {*/
+/*width: 100%;*/
+/*height: 720px;*/
+/*}*/
+
+/*.gm-style div {*/
+/*box-shadow: none !important;*/
+/*border: 0 !important;*/
+/*background: transparent !important;*/
+/*}*/
+
+/*div.info-card {*/
+/*background: #fff !important;*/
+/*box-shadow: 2px 2px #CDCFD8 !important;*/
+/*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,*/
+/*"Helvetica Neue", Arial, sans-serif;*/
+/*font-weight: 400;*/
+/*width: 372px;*/
+/*}*/
+
+/*div.info-card-top {*/
+/*align-items: center;*/
+/*background: darkgrey !important;*/
+/*color: #fff;*/
+/*display: flex;*/
+/*}*/
+
+/*.info-card-heading {*/
+/*font-size: 20px;*/
+/*font-weight: 500;*/
+/*margin-bottom: 10px;*/
+/*}*/
+
+/*.info-card-bottom p {*/
+/*color: #88888c;*/
+/*font-size: 12px;*/
+/*line-height: 2;*/
+/*padding: 24px;*/
+/*}*/
+
+/*.gm-style .gm-style-iw,*/
+/*.gm-style .gm-style-iw div {*/
+/*overflow: visible !important;*/
+/*}*/
+
+/*.gm-style .gm-style-iw + div {*/
+/*display: none !important;*/
+/*}*/
+
+/*!* You can add global styles to this file, and also import other style files *!*/
+
+/*.gm-ui-hover-effect {*/
+/*width: 50px !important;*/
+/*}*/
+
+/**
+ * Copyright (c) 2019. - All Rights Reserved
+ * Unauthorized copying of this file, via any medium is strictly prohibited
+ * Proprietary and confidential
+ * Created by tharakan on 1/22/2019 2:12 PM
+ */
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+#map {
+  height: 100%;
+}
+
+.map-view-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(25, 19, 46, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 10;
+}
+
+.map-view-container:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: .5;
+}
+
+.map-view {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  width: 90%;
+  max-width: 100%;
+  height: -webkit-calc(100vh - 100px);
+  height: calc(100vh - 100px);
+  max-height: 100%;
+  background: #fff;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.12);
+  z-index: 20;
+}
+
+.map-view__map {
+  -ms-flex-preferred-size: 67%;
+  flex-basis: 67%;
+  background-color: #ebebeb;
+}
+
+.map-view__results {
+  -ms-flex-preferred-size: 33%;
+  flex-basis: 33%;
+  padding: 15px;
+  overflow: auto;
+}
+
+.map-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #f9f4e9;
+  margin-bottom: 10px;
+}
+
+.map-card__thumb {
+  -ms-flex-preferred-size: 100px;
+  flex-basis: 100px;
+  margin: 10px;
+  background-color: #777;
+}
+
+.map-card__content {
+  margin: 10px 0;
+  background-color: #ccc;
+}
+
+.map-card__link {
+  -ms-flex-preferred-size: 35px;
+  flex-basis: 35px;
+  margin-left: 10px;
+  background-color: #2162af;
+}
