Add-Map-Styles-Json

--- a/src/app/map-widget/map-widget.component.html
+++ b/src/app/map-widget/map-widget.component.html
@@ -1,7 +1,7 @@
 <div class="map-view-container">
   <div class="map-view">
     <section class="map-view__map">
-      <app-map></app-map>
+      <app-map [ZoomLevel]="5" [MapStyle]="2"></app-map>
     </section>
     <section class="map-view__results">
       <app-map-card class="map-card"></app-map-card>
