--- a/src/app/map-widget/map-widget.component.html
+++ b/src/app/map-widget/map-widget.component.html
@@ -3,11 +3,13 @@
     <input class="map-view__toggle-check" id="map-view__toggle-check" type="checkbox" role="button"/>
     <label class="map-view__toggle-label" for="map-view__toggle-check"><span>▶</span></label>
     <section class="map-view__map">
-      <app-map *ngIf="loadMap" [HotelMarkerDataList]="hotelMarkerDataList" [ZoomLevel]="12" [MapStyle]="2"></app-map>
+      <app-map *ngIf="loadMap" [HotelMarkerDataList]="hotelMarkerDataList" [ZoomLevel]="12" [MapStyle]="2"
+               [EnteredMapCardID]="enteredMapCardID"></app-map>
     </section>
     <section class="map-view__results">
-      <ng-container *ngFor="let hotelMarkerData of hotelMarkerDataList">
-        <app-map-card class="map-card"></app-map-card>
+      <ng-container *ngFor="let hotelMarkerData of hotelMarkerDataList; let i = index;">
+        <app-map-card (mouseenter)="mouseEnterMapCard(hotelMarkerData, i)"
+                      (mouseleave)="mouseLeaveMapCard(hotelMarkerData, i)" class="map-card"></app-map-card>
       </ng-container>
     </section>
   </div>
