--- a/src/app/map-card/map-card.component.html
+++ b/src/app/map-card/map-card.component.html
@@ -1,7 +1,18 @@
 <div class="map-card__thumb">image</div>
 <div class="map-card__content">
   <div class="map-card__content-hotel-name">Royal Rose Hotel New 2 with 2 Days Any 2 Parks</div>
-  <div class="map-card__content-hotel-stars">★ ★ ★ ★ ★</div>
+  <div class="map-card__content-hotel-stars">
+
+    <div class="star-rating">
+      <ng-container>
+        <app-map-card-star-rating [starValue]="'3.5'" [starCount]="5"></app-map-card-star-rating>
+      </ng-container>
+      <ng-container>
+        <div class="rating-label"><span>{{hotel?.starRating}}</span></div>
+      </ng-container>
+    </div>
+
+  </div>
   <div class="map-card__content-hotel-price">AED 1,128.67</div>
 </div>
 <div class="map-card__link"></div>
