--- a/src/styles.css
+++ b/src/styles.css
@@ -197,3 +197,75 @@
   margin-left: 10px;
   background-color: #2162af;
 }
+
+/* star rating */
+
+.map-card-star-ratings {
+  unicode-bidi: bidi-override;
+  color: #e0e0e0;
+  font-size: 20px;
+  height: 20px;
+  width: auto;
+  display: table;
+  position: relative;
+  padding: 0;
+  line-height: 18px;
+  text-indent: initial;
+  z-index: 0;
+}
+
+.map-card-star-ratings i {
+  font-style: normal;
+}
+
+.map-card-star-ratings i:before {
+  width: 25px;
+  display: inline-block;
+  margin-left: -2px;
+}
+
+html[dir=rtl] .map-card-star-ratings i:before {
+  margin-right: -2px;
+}
+
+.map-card-star-ratings .star-item:before {
+  font-family: "icomoon";
+  content: "";
+}
+
+.map-card-star-ratings__top {
+  color: #8A4694;
+  display: block;
+  text-shadow: 0 0 1px #8A4694;
+  padding: 0;
+  position: absolute;
+  left: 0;
+  overflow: hidden;
+  z-index: 1;
+  height: 20px;
+  white-space: nowrap;
+}
+
+html[dir=rtl] .map-card-star-ratings__top {
+  right: 0;
+  left: auto;
+}
+
+.map-card-star-ratings__bottom {
+  z-index: 0;
+}
+
+/* label rating */
+
+.map-card__content .star-rating .rating-label, .map-card__content .star-rating .rating-label {
+  margin-top: 3px;
+}
+
+ .map-card__content .star-rating .rating-label span, .map-card__content .star-rating .rating-label span {
+  font-size: 13px;
+  font-size: 0.8125rem;
+  color: #fff;
+  background-color: #EB8007;
+  padding: 4px 10px;
+  border-radius: 5px;
+}
