--- a/src/app/map-card-star-rating/map-card-star-rating.component.html
+++ b/src/app/map-card-star-rating/map-card-star-rating.component.html
@@ -1,8 +1,8 @@
-<div class="map-card-star-ratings">
-  <div class="map-card-star-ratings__top" [style.width.%]="getPercentage()">
+<div class="surf-star-ratings">
+  <div class="surf-star-ratings__top" [style.width.%]="getPercentage()">
     <i *ngFor="let star of starArray(starCount)">★</i>
   </div>
-  <div class="map-card-star-ratings__bottom">
+  <div class="surf-star-ratings__bottom">
     <i *ngFor="let star of starArray(starCount)">★</i>
   </div>
 </div>
