--- a/src/app/map-widget/map-widget.component.html
+++ b/src/app/map-widget/map-widget.component.html
@@ -3,10 +3,11 @@
     <input class="map-view__toggle-check" id="map-view__toggle-check" type="checkbox" role="button"/>
     <label class="map-view__toggle-label" for="map-view__toggle-check"></label>
     <section class="map-view__map">
-      <app-map *ngIf="loadMap" [HotelMarkerDataList]="hotelMarkerDataList" [MapCardDataList]="mapCardDataList" [ZoomLevel]="11" [MapStyle]="2"
+      <app-map *ngIf="loadMap" [HotelMarkerDataList]="hotelMarkerDataList" [MapCardDataList]="mapCardDataList"
+               [ZoomLevel]="11" [MapStyle]="2"
                (EmitInfoWindowClose)="resetSelectedMapCard()"
                [EnteredMapCardID]="enteredMapCardID" (EmitMapClick)="resetSelectedMapCard()"
-               (EmitSelectedMarkerId)="scrollToCards($event)"></app-map>
+               (EmitSelectedMarkerId)="scrollToCards($event);scrollToCardsMobile($event);"></app-map>
     </section>
     <section class="map-view__results">
       <ng-container *ngFor="let mapCardData of mapCardDataList; let i = index;">
@@ -17,5 +18,30 @@
                       [ngClass]="(mapCardData.uid == selectedMarkerID) ? 'map-card--highlight':''"></app-map-card>
       </ng-container>
     </section>
+
+
+    <section class="map-view__results--mobile">
+      <div class="map-view__results--mobile-container">
+        <ul class="map-card-mobile-list">
+          <ng-container *ngFor="let mapCardData of mapCardDataList; let i = index;">
+            <app-map-card-mobile [id]="mapCardData.uid + 'm'"
+                                 (click)="mouseEnterMapCard(mapCardData, i); (mapCardData.uid == selectedMarkerID) ? '':(selectedMarkerID = undefined)"
+                                 [Hotel]="mapCardData.hotel" [Generic]="mapCardData.generic"
+                                 (mouseleave)="mouseLeaveMapCard(mapCardData, i)"
+                                 [ngClass]="(mapCardData.uid == selectedMarkerID) ? 'map-card-mobile map-card-mobile--highlight':'map-card-mobile'"></app-map-card-mobile>
+          </ng-container>
+        </ul>
+      </div>
+      <div class="map-view__results--mobile-info">
+        <div class="bottom-info-icon-container">
+          <img class="bottom-info-icon-container__icon" src="/assets/yas-brand/map-icons/map-search-icon.svg"
+               alt="map-icon"/>
+          <span class="bottom-info-icon-container__text">Map View</span>
+        </div>
+        <div class="bottom-info-text-container">{{mapCardDataList.length}} hotel options available</div>
+      </div>
+    </section>
+
+
   </div>
 </div>
